src/parser.output
   0  $accept : %entry% $end

   1  program : item_list EOF

   2  item_list :
   3            | item_list item

   4  item : stmt
   5       | fdecl

   6  typ : INT
   7      | BOOL
   8      | CHAR
   9      | STRING
  10      | NULL
  11      | typ LBRACK expr RBRACK

  12  stmt : expr SEMI
  13       | vdecl SEMI
  14       | RETURN expr SEMI
  15       | RETURN SEMI
  16       | LBRACE stmt_list RBRACE
  17       | IF LPAREN expr RPAREN stmt
  18       | IF LPAREN expr RPAREN stmt ELSE stmt
  19       | FOR LPAREN expr SEMI expr SEMI expr RPAREN stmt
  20       | WHILE LPAREN expr RPAREN stmt

  21  stmt_list : stmt
  22            | stmt_list stmt

  23  expr : NEG expr
  24       | NOT expr
  25       | ID ASSIGN expr
  26       | expr PLUS expr
  27       | expr MINUS expr
  28       | expr TIMES expr
  29       | expr DIVIDE expr
  30       | expr EQ expr
  31       | expr NEQ expr
  32       | expr LT expr
  33       | expr LEQ expr
  34       | expr GT expr
  35       | expr GEQ expr
  36       | expr AND expr
  37       | expr OR expr
  38       | INTLIT
  39       | TRUE
  40       | FALSE
  41       | ID
  42       | STRINGLIT
  43       | ID LBRACK expr RBRACK
  44       | LPAREN expr RPAREN
  45       | ID LPAREN actuals_opt RPAREN
  46       | LBRACK expr_list RBRACK

  47  expr_list :
  48            | expr_list expr

  49  vdecl : typ ID
  50        | typ ID ASSIGN expr

  51  fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  52  formals_opt :
  53              | formal_list

  54  formal_list : typ ID
  55              | formal_list COMMA typ ID

  56  actuals_opt :
  57              | actuals_list

  58  actuals_list : expr
  59               | actuals_list COMMA expr

  60  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (60)
	item_list : .  (2)

	.  reduce 2

	program  goto 3
	item_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (60)

	.  reduce 60


state 4
	program : item_list . EOF  (1)
	item_list : item_list . item  (3)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACE  shift 9
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INT  shift 16
	CHAR  shift 17
	STRING  shift 18
	BOOL  shift 19
	NULL  shift 20
	FOR  shift 21
	WHILE  shift 22
	DEF  shift 23
	RETURN  shift 24
	EOF  shift 25
	.  error

	item  goto 26
	stmt  goto 27
	fdecl  goto 28
	typ  goto 29
	expr  goto 30
	vdecl  goto 31


5: shift/reduce conflict (shift 32, reduce 41) on LPAREN
5: shift/reduce conflict (shift 33, reduce 41) on LBRACK
state 5
	expr : ID . ASSIGN expr  (25)
	expr : ID .  (41)
	expr : ID . LBRACK expr RBRACK  (43)
	expr : ID . LPAREN actuals_opt RPAREN  (45)

	LPAREN  shift 32
	LBRACK  shift 33
	ASSIGN  shift 34
	ID  reduce 41
	STRINGLIT  reduce 41
	INTLIT  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	RBRACK  reduce 41
	COMMA  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	NEG  reduce 41
	LT  reduce 41
	GT  reduce 41
	LEQ  reduce 41
	GEQ  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	NOT  reduce 41
	TRUE  reduce 41
	FALSE  reduce 41


state 6
	expr : STRINGLIT .  (42)

	.  reduce 42


state 7
	expr : INTLIT .  (38)

	.  reduce 38


state 8
	expr : LPAREN . expr RPAREN  (44)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 35


state 9
	stmt : LBRACE . stmt_list RBRACE  (16)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACE  shift 9
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INT  shift 16
	CHAR  shift 17
	STRING  shift 18
	BOOL  shift 19
	NULL  shift 20
	FOR  shift 21
	WHILE  shift 22
	RETURN  shift 24
	.  error

	stmt  goto 36
	typ  goto 29
	expr  goto 30
	vdecl  goto 31
	stmt_list  goto 37


state 10
	expr : LBRACK . expr_list RBRACK  (46)
	expr_list : .  (47)

	.  reduce 47

	expr_list  goto 38


state 11
	expr : NEG . expr  (23)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 39


state 12
	expr : NOT . expr  (24)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 40


state 13
	stmt : IF . LPAREN expr RPAREN stmt  (17)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (18)

	LPAREN  shift 41
	.  error


state 14
	expr : TRUE .  (39)

	.  reduce 39


state 15
	expr : FALSE .  (40)

	.  reduce 40


state 16
	typ : INT .  (6)

	.  reduce 6


state 17
	typ : CHAR .  (8)

	.  reduce 8


state 18
	typ : STRING .  (9)

	.  reduce 9


state 19
	typ : BOOL .  (7)

	.  reduce 7


state 20
	typ : NULL .  (10)

	.  reduce 10


state 21
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN stmt  (19)

	LPAREN  shift 42
	.  error


state 22
	stmt : WHILE . LPAREN expr RPAREN stmt  (20)

	LPAREN  shift 43
	.  error


state 23
	fdecl : DEF . typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (51)

	INT  shift 16
	CHAR  shift 17
	STRING  shift 18
	BOOL  shift 19
	NULL  shift 20
	.  error

	typ  goto 44


state 24
	stmt : RETURN . expr SEMI  (14)
	stmt : RETURN . SEMI  (15)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	SEMI  shift 45
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 46


state 25
	program : item_list EOF .  (1)

	.  reduce 1


state 26
	item_list : item_list item .  (3)

	.  reduce 3


state 27
	item : stmt .  (4)

	.  reduce 4


state 28
	item : fdecl .  (5)

	.  reduce 5


state 29
	typ : typ . LBRACK expr RBRACK  (11)
	vdecl : typ . ID  (49)
	vdecl : typ . ID ASSIGN expr  (50)

	ID  shift 47
	LBRACK  shift 48
	.  error


state 30
	stmt : expr . SEMI  (12)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	SEMI  shift 49
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 31
	stmt : vdecl . SEMI  (13)

	SEMI  shift 62
	.  error


state 32
	expr : ID LPAREN . actuals_opt RPAREN  (45)
	actuals_opt : .  (56)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	RPAREN  reduce 56

	expr  goto 63
	actuals_opt  goto 64
	actuals_list  goto 65


state 33
	expr : ID LBRACK . expr RBRACK  (43)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 66


state 34
	expr : ID ASSIGN . expr  (25)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 67


state 35
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : LPAREN expr . RPAREN  (44)

	RPAREN  shift 68
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 36
	stmt_list : stmt .  (21)

	.  reduce 21


state 37
	stmt : LBRACE stmt_list . RBRACE  (16)
	stmt_list : stmt_list . stmt  (22)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACE  shift 9
	RBRACE  shift 69
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INT  shift 16
	CHAR  shift 17
	STRING  shift 18
	BOOL  shift 19
	NULL  shift 20
	FOR  shift 21
	WHILE  shift 22
	RETURN  shift 24
	.  error

	stmt  goto 70
	typ  goto 29
	expr  goto 30
	vdecl  goto 31


state 38
	expr : LBRACK expr_list . RBRACK  (46)
	expr_list : expr_list . expr  (48)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	RBRACK  shift 71
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 72


state 39
	expr : NEG expr .  (23)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 23


state 40
	expr : NOT expr .  (24)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 24


state 41
	stmt : IF LPAREN . expr RPAREN stmt  (17)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (18)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 73


state 42
	stmt : FOR LPAREN . expr SEMI expr SEMI expr RPAREN stmt  (19)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 74


state 43
	stmt : WHILE LPAREN . expr RPAREN stmt  (20)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 75


state 44
	typ : typ . LBRACK expr RBRACK  (11)
	fdecl : DEF typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (51)

	ID  shift 76
	LBRACK  shift 48
	.  error


state 45
	stmt : RETURN SEMI .  (15)

	.  reduce 15


state 46
	stmt : RETURN expr . SEMI  (14)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	SEMI  shift 77
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 47
	vdecl : typ ID .  (49)
	vdecl : typ ID . ASSIGN expr  (50)

	ASSIGN  shift 78
	SEMI  reduce 49


state 48
	typ : typ LBRACK . expr RBRACK  (11)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 79


state 49
	stmt : expr SEMI .  (12)

	.  reduce 12


state 50
	expr : expr PLUS . expr  (26)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 80


state 51
	expr : expr MINUS . expr  (27)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 81


state 52
	expr : expr TIMES . expr  (28)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 82


state 53
	expr : expr DIVIDE . expr  (29)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 83


state 54
	expr : expr LT . expr  (32)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 84


state 55
	expr : expr GT . expr  (34)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 85


state 56
	expr : expr LEQ . expr  (33)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 86


state 57
	expr : expr GEQ . expr  (35)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 87


state 58
	expr : expr EQ . expr  (30)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 88


state 59
	expr : expr NEQ . expr  (31)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 89


state 60
	expr : expr AND . expr  (36)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 90


state 61
	expr : expr OR . expr  (37)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 91


state 62
	stmt : vdecl SEMI .  (13)

	.  reduce 13


state 63
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	actuals_list : expr .  (58)

	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  reduce 58
	COMMA  reduce 58


state 64
	expr : ID LPAREN actuals_opt . RPAREN  (45)

	RPAREN  shift 92
	.  error


state 65
	actuals_opt : actuals_list .  (57)
	actuals_list : actuals_list . COMMA expr  (59)

	COMMA  shift 93
	RPAREN  reduce 57


state 66
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : ID LBRACK expr . RBRACK  (43)

	RBRACK  shift 94
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 67
	expr : ID ASSIGN expr .  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	ID  reduce 25
	STRINGLIT  reduce 25
	INTLIT  reduce 25
	LPAREN  reduce 25
	RPAREN  reduce 25
	SEMI  reduce 25
	LBRACK  reduce 25
	RBRACK  reduce 25
	COMMA  reduce 25
	NEG  reduce 25
	NOT  reduce 25
	TRUE  reduce 25
	FALSE  reduce 25


state 68
	expr : LPAREN expr RPAREN .  (44)

	.  reduce 44


state 69
	stmt : LBRACE stmt_list RBRACE .  (16)

	.  reduce 16


state 70
	stmt_list : stmt_list stmt .  (22)

	.  reduce 22


state 71
	expr : LBRACK expr_list RBRACK .  (46)

	.  reduce 46


state 72
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr_list : expr_list expr .  (48)

	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	ID  reduce 48
	STRINGLIT  reduce 48
	INTLIT  reduce 48
	LPAREN  reduce 48
	LBRACK  reduce 48
	RBRACK  reduce 48
	NEG  reduce 48
	NOT  reduce 48
	TRUE  reduce 48
	FALSE  reduce 48


state 73
	stmt : IF LPAREN expr . RPAREN stmt  (17)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (18)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	RPAREN  shift 95
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 74
	stmt : FOR LPAREN expr . SEMI expr SEMI expr RPAREN stmt  (19)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	SEMI  shift 96
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 75
	stmt : WHILE LPAREN expr . RPAREN stmt  (20)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	RPAREN  shift 97
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 76
	fdecl : DEF typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (51)

	LPAREN  shift 98
	.  error


state 77
	stmt : RETURN expr SEMI .  (14)

	.  reduce 14


state 78
	vdecl : typ ID ASSIGN . expr  (50)

	ID  shift 5
	STRINGLIT  shift 6
	INTLIT  shift 7
	LPAREN  shift 8
	LBRACK  shift 10
	NEG  shift 11
	NOT  shift 12
	TRUE  shift 14
	FALSE  shift 15
	.  error

	expr  goto 99


state 79
	typ : typ LBRACK expr . RBRACK  (11)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	RBRACK  shift 100
	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	LT  shift 54
	GT  shift 55
	LEQ  shift 56
	GEQ  shift 57
	EQ  shift 58
	NEQ  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 80
	expr : expr . PLUS expr  (26)
	expr : expr PLUS expr .  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	TIMES  shift 52
	DIVIDE  shift 53
	ID  reduce 26
	STRINGLIT  reduce 26
	INTLIT  reduce 26
	LPAREN  reduce 26
	RPAREN  reduce 26
	SEMI  reduce 26
	LBRACK  reduce 26
	RBRACK  reduce 26
	COMMA  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	NEG  reduce 26
	LT  reduce 26
	GT  reduce 26
	LEQ  reduce 26
	GEQ  reduce 26
	EQ  reduce 26
	NEQ  reduce 26
	AND  reduce 26
	OR  reduce 26
	NOT  reduce 26
	TRUE  reduce 26
	FALSE  reduce 26


state 81
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr MINUS expr .  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	TIMES  shift 52
	DIVIDE  shift 53
	ID  reduce 27
	STRINGLIT  reduce 27
	INTLIT  reduce 27
	LPAREN  reduce 27
	RPAREN  reduce 27
	SEMI  reduce 27
	LBRACK  reduce 27
	RBRACK  reduce 27
	COMMA  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	NEG  reduce 27
	LT  reduce 27
	GT  reduce 27
	LEQ  reduce 27
	GEQ  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	AND  reduce 27
	OR  reduce 27
	NOT  reduce 27
	TRUE  reduce 27
	FALSE  reduce 27


state 82
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr TIMES expr .  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 28


state 83
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr DIVIDE expr .  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 29


state 84
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIVIDE expr  (29)
	expr : expr . EQ expr  (30)
	expr : expr . NEQ expr  (31)
	expr : expr . LT expr  (32)
	expr : expr LT expr .  (32)
	expr : expr . LEQ expr  (33)
	expr : expr . GT expr  (34)
	expr : expr . GEQ expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 50
	MINUS  shift 51
	TIMES  shift 52
	DIVIDE  shift 53
	ID  reduce 32
	STRINGLIT  reduce 32
	INTLIT  reduce 32
	LPAREN  reduce 32
	RPAREN  reduce 32
	SEMI  reduce 32
	LBRACK  reduce 32
	RBRACK  reduce 32
	COMMA  reduce 32
	NEG  reduce 32
	LT  reduce 32
	GT  reduce 32
	LEQ  reduce 32
	GEQ  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	NOT  reduce 32
	TRUE  reduce 32
	FALSE  reduce 32

